--- a/public/index.html
+++ b/public/index.html
@@ -3,54 +3,29 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Llama Async Proxy Dashboard">
-  <title>Llama Async Proxy Dashboard</title>
-  
-  <!-- Favicon -->
-  <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>🦙</text></svg>">
-  
-  <!-- Styles -->
+  <title>Llama Proxy Dashboard</title>
   <link rel="stylesheet" href="/css/main.css">
-  <link rel="stylesheet" href="/css/components.css">
-  
-  <!-- Socket.IO client will be loaded by app.js -->
 </head>
 <body>
-  <div id="notifications" class="notifications-container"></div>
-  
+  <div id="notifications"></div>
   <div id="app">
     <div class="loading-screen">
-      <div class="loading-spinner"></div>
-      <p>Connecting to server...</p>
+      <div class="spinner"></div>
+      <p>Connecting...</p>
     </div>
   </div>
 
-  <!-- Utilities -->
   <script src="/js/utils/format.js"></script>
-  <script src="/js/utils/dom.js"></script>
-  <script src="/js/utils/validation.js"></script>
-  <script src="/js/utils/storage.js"></script>
-
-  <!-- Core Framework -->
   <script src="/js/core/component.js"></script>
   <script src="/js/core/router.js"></script>
   <script src="/js/core/state.js"></script>
-  
-  <!-- Services -->
   <script src="/js/services/socket.js"></script>
-  
-  <!-- Pages -->
+  <script src="/js/components/layout/layout.js"></script>
   <script src="/js/pages/dashboard.js"></script>
   <script src="/js/pages/models.js"></script>
   <script src="/js/pages/monitoring.js"></script>
-  <script src="/js/pages/configuration.js"></script>
   <script src="/js/pages/settings.js"></script>
   <script src="/js/pages/logs.js"></script>
-
-  <!-- Components -->
-  <script src="/js/components/layout/layout.js"></script>
-
-  <!-- Main App -->
   <script src="/js/app.js"></script>
 </body>
 </html>
