--- a/public/index.html
+++ b/public/index.html
@@ -1,31 +1,31 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Llama Proxy Dashboard</title>
-  <link rel="stylesheet" href="/css/main.css">
-</head>
-<body>
-  <div id="notifications"></div>
-  <div id="app">
-    <div class="loading-screen">
-      <div class="spinner"></div>
-      <p>Connecting...</p>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Llama Proxy Dashboard</title>
+    <link rel="stylesheet" href="/css/main.css" />
+  </head>
+  <body>
+    <div id="notifications"></div>
+    <div id="app">
+      <div class="loading-screen">
+        <div class="spinner"></div>
+        <p>Connecting...</p>
+      </div>
     </div>
-  </div>
 
-  <script src="/js/utils/format.js"></script>
-  <script src="/js/core/component.js"></script>
-  <script src="/js/core/router.js"></script>
-  <script src="/js/core/state.js"></script>
-  <script src="/js/services/socket.js"></script>
-  <script src="/js/components/layout/layout.js"></script>
-  <script src="/js/pages/dashboard.js"></script>
-  <script src="/js/pages/models.js"></script>
-  <script src="/js/pages/monitoring.js"></script>
-  <script src="/js/pages/settings.js"></script>
-  <script src="/js/pages/logs.js"></script>
-  <script src="/js/app.js"></script>
-</body>
+    <script src="/js/utils/format.js"></script>
+    <script src="/js/core/component.js"></script>
+    <script src="/js/core/router.js"></script>
+    <script src="/js/core/state.js"></script>
+    <script src="/js/services/socket.js"></script>
+    <script src="/js/components/layout/layout.js"></script>
+    <script src="/js/pages/dashboard.js"></script>
+    <script src="/js/pages/models.js"></script>
+    <script src="/js/pages/monitoring.js"></script>
+    <script src="/js/pages/settings.js"></script>
+    <script src="/js/pages/logs.js"></script>
+    <script src="/js/app.js"></script>
+  </body>
 </html>
