Refactor code structure for improved readability and maintainability

--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,7 @@
     <script src="/js/core/state.js"></script>
     <script src="/js/services/socket.js"></script>
     <script src="/js/components/layout/layout.js"></script>
+    <script src="/js/libs/chart.min.js"></script>
     <script src="/js/pages/dashboard.js"></script>
     <script src="/js/pages/models.js"></script>
     <script src="/js/pages/settings.js"></script>
