--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,13 @@
     <script src="/js/services/socket.js"></script>
     <script src="/js/components/layout/layout.js"></script>
     <script src="/js/libs/chart.min.js"></script>
+    <script src="/js/utils/dashboard-utils.js"></script>
+    <script src="/js/components/dashboard/chart-manager.js"></script>
+    <script src="/js/components/dashboard/stats-grid.js"></script>
+    <script src="/js/components/dashboard/charts-section.js"></script>
+    <script src="/js/components/dashboard/system-health.js"></script>
+    <script src="/js/components/dashboard/router-card.js"></script>
+    <script src="/js/components/dashboard/quick-actions.js"></script>
     <script src="/js/pages/dashboard.js"></script>
     <script src="/js/pages/models.js"></script>
     <script src="/js/pages/settings.js"></script>
