--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,12 @@
     <script src="/js/components/dashboard/quick-actions.js"></script>
     <script src="/js/pages/dashboard.js"></script>
     <script src="/js/pages/models.js"></script>
-    <script src="/js/pages/settings.js"></script>
+    <script src="/js/pages/settings/settings-controller.js"></script>
+    <script src="/js/pages/settings/settings-page.js"></script>
+    <script src="/js/pages/settings/components/router-card.js"></script>
+    <script src="/js/pages/settings/components/server-paths.js"></script>
+    <script src="/js/pages/settings/components/model-defaults.js"></script>
+    <script src="/js/pages/settings/components/save-section.js"></script>
     <script src="/js/pages/logs.js"></script>
     <script src="/js/app.js"></script>
   </body>
