feat: Refactor dashboard module structure by introducing controller, page, and not-found components

--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,9 @@
     <script src="/js/components/dashboard/system-health.js"></script>
     <script src="/js/components/dashboard/router-card.js"></script>
     <script src="/js/components/dashboard/quick-actions.js"></script>
-    <script src="/js/pages/dashboard.js"></script>
+    <script src="/js/pages/dashboard/controller.js"></script>
+    <script src="/js/pages/dashboard/page.js"></script>
+    <script src="/js/pages/dashboard/not-found.js"></script>
     <script src="/js/pages/models.js"></script>
     <script src="/js/pages/settings/settings-controller.js"></script>
     <script src="/js/pages/settings/settings-page.js"></script>
