--- a/public/index.html
+++ b/public/index.html
@@ -38,6 +38,7 @@
     <script src="/js/pages/settings/components/router-config.js"></script>
     <script src="/js/pages/settings/components/server-paths.js"></script>
     <script src="/js/pages/settings/components/model-defaults.js"></script>
+    <script src="/js/pages/settings/components/logging-config.js"></script>
     <script src="/js/pages/settings/components/save-section.js"></script>
     <script src="/js/pages/logs.js"></script>
     <script src="/js/app.js"></script>
