refactor(dashboard): reorganize chart components and documentation structure
- Move best practices to mandatory rules in AGENTS.md
- Add new chart component scripts to index.html
- Refactor ChartManager for better lifecycle management

--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,11 @@
     <script src="/js/components/layout/layout.js"></script>
     <script src="/js/libs/chart.min.js"></script>
     <script src="/js/utils/dashboard-utils.js"></script>
+    <script src="/js/components/dashboard/charts/chart-utils.js"></script>
+    <script src="/js/components/dashboard/charts/chart-colors.js"></script>
+    <script src="/js/components/dashboard/charts/chart-config.js"></script>
+    <script src="/js/components/dashboard/charts/chart-usage.js"></script>
+    <script src="/js/components/dashboard/charts/chart-memory.js"></script>
     <script src="/js/components/dashboard/chart-manager.js"></script>
     <script src="/js/components/dashboard/stats-grid.js"></script>
     <script src="/js/components/dashboard/charts-section.js"></script>
