--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,14 @@
     <script src="/js/utils/format.js"></script>
     <script src="/js/core/component.js"></script>
     <script src="/js/core/router.js"></script>
+    <script src="/js/core/state/state-core.js"></script>
+    <script src="/js/core/state/handlers/connection.js"></script>
+    <script src="/js/core/state/handlers/broadcast.js"></script>
+    <script src="/js/core/state/handlers/response.js"></script>
+    <script src="/js/core/state/state-socket.js"></script>
+    <script src="/js/core/state/state-models.js"></script>
+    <script src="/js/core/state/state-requests.js"></script>
+    <script src="/js/core/state/state-api.js"></script>
     <script src="/js/core/state.js"></script>
     <script src="/js/services/socket.js"></script>
     <script src="/js/components/layout/layout.js"></script>
