feat(dashboard): add GPU details component and responsive UI updates

--- a/public/index.html
+++ b/public/index.html
@@ -38,6 +38,7 @@
     <script src="/js/components/dashboard/charts/chart-memory.js"></script>
     <script src="/js/components/dashboard/chart-manager.js"></script>
     <script src="/js/components/dashboard/stats-grid.js"></script>
+    <script src="/js/components/dashboard/gpu-details.js"></script>
     <script src="/js/components/dashboard/charts-section.js"></script>
     <script src="/js/components/dashboard/system-health.js"></script>
     <script src="/js/components/router-card.js"></script>
