chore(tests): refactor state-router integration tests and add popstate test
- Remove redundant comment lines from multiple test cases
- Simplify async/await patterns in error propagation tests
- Update test descriptions for clarity
- Add test verifying popstate listener registration for browser back button support

The changes improve test readability and ensure proper error handling validation while adding a new test for browser history support.

--- a/public/index.html
+++ b/public/index.html
@@ -47,6 +47,8 @@
     <script src="/js/pages/dashboard/page.js"></script>
     <script src="/js/pages/dashboard/not-found.js"></script>
     <script src="/js/pages/models.js"></script>
+    <script src="/js/services/presets.js"></script>
+    <script src="/js/pages/presets.js"></script>
     <script src="/js/pages/settings/settings-controller.js"></script>
     <script src="/js/pages/settings/settings-page.js"></script>
     <script src="/js/pages/settings/components/router-config.js"></script>
