feat(config): Add config validation, remove completed presets docs
- Added `getPresetConfigSchema()` to define expected config parameters with types/limits
- Implemented `validateCompleteConfig()` with comprehensive validation including numeric range checks and warning generation
- Removed outdated CHANGES_MADE.md entries for completed presets feature (handlers, UI, CSS, docs)

--- a/public/index.html
+++ b/public/index.html
@@ -48,6 +48,11 @@
     <script src="/js/pages/dashboard/not-found.js"></script>
     <script src="/js/pages/models.js"></script>
     <script src="/js/services/presets.js"></script>
+    <script src="/js/components/presets/parameters.js"></script>
+    <script src="/js/components/presets/validation.js"></script>
+    <script src="/js/components/presets/parameter-input.js"></script>
+    <script src="/js/components/presets/parameter-section.js"></script>
+    <script src="/js/components/presets/parameter-form.js"></script>
     <script src="/js/pages/presets.js"></script>
     <script src="/js/pages/settings/settings-controller.js"></script>
     <script src="/js/pages/settings/settings-page.js"></script>
