--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Llama Proxy Dashboard</title>
     <link rel="stylesheet" href="/css/main.css" />
+    <link rel="stylesheet" href="/css/components/llama-server.css" />
   </head>
   <body>
     <div id="notifications"></div>
@@ -16,6 +17,8 @@
     </div>
 
     <script src="/js/utils/format.js"></script>
+    <script src="/js/utils/filter.js"></script>
+    <script src="/js/utils/keyboard-shortcuts.js"></script>
     <script src="/js/core/component.js"></script>
     <script src="/js/core/router.js"></script>
     <script src="/js/core/state/state-core.js"></script>
@@ -25,6 +28,7 @@
     <script src="/js/core/state/state-socket.js"></script>
     <script src="/js/core/state/state-models.js"></script>
     <script src="/js/core/state/state-requests.js"></script>
+    <script src="/js/core/state/state-llama.js"></script>
     <script src="/js/core/state/state-api.js"></script>
     <script src="/js/core/state.js"></script>
     <script src="/js/services/socket.js"></script>
@@ -43,10 +47,14 @@
     <script src="/js/components/dashboard/system-health.js"></script>
     <script src="/js/components/router-card.js"></script>
     <script src="/js/components/dashboard/quick-actions.js"></script>
+    <script src="/js/components/llama-server/status-panel.js"></script>
+    <script src="/js/components/llama-server/llama-server-config.js"></script>
     <script src="/js/pages/dashboard/controller.js"></script>
     <script src="/js/pages/dashboard/page.js"></script>
     <script src="/js/pages/dashboard/not-found.js"></script>
     <script src="/js/pages/models.js"></script>
+    <script src="/js/components/models/model-table-row.js"></script>
+    <script src="/js/components/models/model-filters.js"></script>
     <script src="/js/services/presets.js"></script>
     <script src="/js/components/presets/parameters.js"></script>
     <script src="/js/components/presets/validation.js"></script>
@@ -61,6 +69,9 @@
     <script src="/js/pages/settings/components/model-defaults.js"></script>
     <script src="/js/pages/settings/components/logging-config.js"></script>
     <script src="/js/pages/settings/components/save-section.js"></script>
+    <script src="/js/components/settings/config-export-import.js"></script>
+    <script src="/js/components/presets/preset-templates.js"></script>
+    <script src="/js/components/keyboard-shortcuts-help.js"></script>
     <script src="/js/pages/logs.js"></script>
     <script src="/js/app.js"></script>
   </body>
