--- a/public/index.html
+++ b/public/index.html
@@ -19,8 +19,11 @@
     <script src="/js/utils/format.js"></script>
     <script src="/js/utils/filter.js"></script>
     <script src="/js/utils/keyboard-shortcuts.js"></script>
+    <script src="/js/core/dom-reconciler.js"></script>
     <script src="/js/core/component.js"></script>
+    <script src="/js/core/state-validator.js"></script>
     <script src="/js/core/router.js"></script>
+    <script src="/js/components/table.js"></script>
     <script src="/js/core/state/state-core.js"></script>
     <script src="/js/core/state/handlers/connection.js"></script>
     <script src="/js/core/state/handlers/broadcast.js"></script>
