--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,7 @@
 
     <script src="/js/utils/format.js"></script>
     <script src="/js/utils/filter.js"></script>
+    <script src="/js/utils/metrics-parser.js"></script>
     <script src="/js/utils/keyboard-shortcuts.js"></script>
     <script src="/js/core/dom-reconciler.js"></script>
     <script src="/js/core/component.js"></script>
