feat(presets): Make models section collapsible with toggle
- Add collapsible functionality to Models section with expand/collapse toggle
- Section is collapsed by default for cleaner UI
- Include toggle icon indicator (▶/▼)
- Add new CSS file for presets page styling

--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Llama Proxy Dashboard</title>
     <link rel="stylesheet" href="/css/main.css" />
+    <link rel="stylesheet" href="/css/pages/presets/presets.css" />
     <link rel="stylesheet" href="/css/components/llama-server.css" />
   </head>
   <body>
