feat: add comprehensive AI agent guidelines for Llama Async Proxy Dashboard
Add AGENTS.md document providing strict guidelines for AI coding assistants working on the project. This includes architectural patterns, coding standards, and critical rules to ensure consistent, maintainable contributions. The document emphasizes the project's unique vanilla JavaScript approach, event-driven architecture with Socket.IO, and server-owned state pattern. It also outlines non-negotiable rules like avoiding frameworks, using pnpm, and keeping files under 200 lines.

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,6 @@
     <link rel="stylesheet" href="/css/components/llama-server.css" />
   </head>
   <body>
-    <div id="notifications"></div>
     <div id="app">
       <div class="loading-screen">
         <div class="spinner"></div>
@@ -21,6 +20,8 @@
     <script src="/js/utils/filter.js"></script>
     <script src="/js/utils/metrics-parser.js"></script>
     <script src="/js/utils/keyboard-shortcuts.js"></script>
+    <script src="/js/utils/toast.js"></script>
+    <script src="/js/utils/script-loader.js"></script>
     <script src="/js/core/component.js"></script>
     <script src="/js/core/state-validator.js"></script>
     <script src="/js/core/router.js"></script>
@@ -37,20 +38,7 @@
     <script src="/js/core/state.js"></script>
     <script src="/js/services/socket.js"></script>
     <script src="/js/components/layout/layout.js"></script>
-    <script src="/js/libs/chart.min.js"></script>
-    <script src="/js/utils/dashboard-utils.js"></script>
-    <script src="/js/components/dashboard/charts/chart-utils.js"></script>
-    <script src="/js/components/dashboard/charts/chart-colors.js"></script>
-    <script src="/js/components/dashboard/charts/chart-config.js"></script>
-    <script src="/js/components/dashboard/charts/chart-usage.js"></script>
-    <script src="/js/components/dashboard/charts/chart-memory.js"></script>
-    <script src="/js/components/dashboard/chart-manager.js"></script>
-    <script src="/js/components/dashboard/stats-grid.js"></script>
-    <script src="/js/components/dashboard/gpu-details.js"></script>
-    <script src="/js/components/dashboard/charts-section.js"></script>
-    <script src="/js/components/dashboard/system-health.js"></script>
     <script src="/js/components/router-card.js"></script>
-    <script src="/js/components/dashboard/quick-actions.js"></script>
     <script src="/js/components/llama-server/status-panel.js"></script>
     <script src="/js/components/llama-server/llama-server-config.js"></script>
     <script src="/js/pages/dashboard/controller.js"></script>
