feat(dashboard): add new chart components and cache utility
- Add new dashboard components for charts, stats grid, GPU details, and system health
- Include Chart.js library and dashboard utilities for chart management
- Add cache utility script for improved performance
- Add llama parameters component for preset configurations
- Ensure ChartManager is defined before use to prevent errors
- Update chart manager to handle theme changes and chart recreation properly

--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,7 @@
     <script src="/js/utils/keyboard-shortcuts.js"></script>
     <script src="/js/utils/toast.js"></script>
     <script src="/js/utils/script-loader.js"></script>
+    <script src="/js/utils/cache.js"></script>
     <script src="/js/core/component.js"></script>
     <script src="/js/core/state-validator.js"></script>
     <script src="/js/core/router.js"></script>
@@ -41,6 +42,19 @@
     <script src="/js/components/router-card.js"></script>
     <script src="/js/components/llama-server/status-panel.js"></script>
     <script src="/js/components/llama-server/llama-server-config.js"></script>
+    <script src="/js/libs/chart.min.js"></script>
+    <script src="/js/utils/dashboard-utils.js"></script>
+    <script src="/js/components/dashboard/charts/chart-utils.js"></script>
+    <script src="/js/components/dashboard/charts/chart-colors.js"></script>
+    <script src="/js/components/dashboard/charts/chart-config.js"></script>
+    <script src="/js/components/dashboard/charts/chart-usage.js"></script>
+    <script src="/js/components/dashboard/charts/chart-memory.js"></script>
+    <script src="/js/components/dashboard/chart-manager.js"></script>
+    <script src="/js/components/dashboard/stats-grid.js"></script>
+    <script src="/js/components/dashboard/gpu-details.js"></script>
+    <script src="/js/components/dashboard/charts-section.js"></script>
+    <script src="/js/components/dashboard/system-health.js"></script>
+    <script src="/js/components/dashboard/quick-actions.js"></script>
     <script src="/js/pages/dashboard/controller.js"></script>
     <script src="/js/pages/dashboard/page.js"></script>
     <script src="/js/pages/dashboard/not-found.js"></script>
@@ -53,6 +67,7 @@
     <script src="/js/components/presets/parameter-input.js"></script>
     <script src="/js/components/presets/parameter-section.js"></script>
     <script src="/js/components/presets/parameter-form.js"></script>
+    <script src="/js/components/presets/llama-params.js"></script>
     <script src="/js/pages/presets.js"></script>
     <script src="/js/pages/settings/settings-controller.js"></script>
     <script src="/js/pages/settings/settings-page.js"></script>
