test: add CacheService mock to frontend and integration tests
Add a mock implementation of CacheService to test files to ensure proper
caching behavior during tests. This includes methods for get, set, delete,
has, clear, and getOrFetch operations with TTL support.

The mock is added to:
- state-models-branches.test.js
- state.test.js
- state-router.test.js

This change ensures consistent test environments and prevents potential
test failures due to missing CacheService dependencies.

--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,7 @@
     <script src="/js/utils/toast.js"></script>
     <script src="/js/utils/script-loader.js"></script>
     <script src="/js/utils/cache.js"></script>
+    <script src="/js/utils/plugin-system.js"></script>
     <script src="/js/core/component.js"></script>
     <script src="/js/core/state-validator.js"></script>
     <script src="/js/core/router.js"></script>
@@ -68,6 +69,7 @@
     <script src="/js/components/presets/parameter-section.js"></script>
     <script src="/js/components/presets/parameter-form.js"></script>
     <script src="/js/components/presets/llama-params.js"></script>
+    <script src="/js/components/command-palette.js"></script>
     <script src="/js/pages/presets.js"></script>
     <script src="/js/pages/settings/settings-controller.js"></script>
     <script src="/js/pages/settings/settings-page.js"></script>
