refactor: consolidate button styles into refined-buttons.css
- Remove duplicate button styles from cards.css, consistent-layout.css, and presets.css
- Update button styles in llama-server.css and quick-wins.css to use new refined button styles
- Standardize button heights, padding, and hover states across components
- Replace color variables

--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="/css/main.css" />
     <link rel="stylesheet" href="/css/pages/presets/presets.css" />
     <link rel="stylesheet" href="/css/components/llama-server.css" />
+    <link rel="stylesheet" href="/css/components/refined-buttons.css" />
   </head>
   <body>
     <div id="app">
@@ -23,6 +24,7 @@
     <script src="/js/utils/toast.js"></script>
     <script src="/js/utils/script-loader.js"></script>
     <script src="/js/utils/cache.js"></script>
+    <script src="/js/utils/compute-worker.js"></script>
     <script src="/js/utils/plugin-system.js"></script>
     <script src="/js/core/component.js"></script>
     <script src="/js/core/state-validator.js"></script>
