test: improve mock element and update error handling
- Enhance `createMockElement` to include mock implementations for `classList`, `setAttribute`, `getAttribute`, `removeAttribute`, `hasAttribute`, and a basic `querySelector` to better simulate DOM behavior in tests
- Update test expectations for `Component.mount()` to throw errors when parent is `null` or when `render()` returns `null`, improving error handling validation
- Fix minor inconsistencies in test assertions and method calls (e.g., `client._connect()` → `client.connect()`)
- Standardize string quotes in `ClientLogger` for consistency (single to double quotes)

--- a/public/index.html
+++ b/public/index.html
@@ -43,6 +43,9 @@
     <script src="/js/services/notification.js"></script>
 
     <!-- Components -->
+    <script src="/js/components/layout/header.js"></script>
+    <script src="/js/components/layout/sidebar.js"></script>
+    <script src="/js/components/layout/main-content.js"></script>
     <script src="/js/components/layout/layout.js"></script>
     <script src="/js/components/router-card.js"></script>
     <script src="/js/components/llama-server/status-panel.js"></script>
