feat: add preset support for Llama server and improve dashboard
- Add `router-actions.js` script to handle router actions globally
- Implement `startLlamaWithPreset` method in StateManager and StateLlamaServer
- Track initialized sections in DashboardPage to prevent duplicate skeleton removal
- Update router action handling to use the new global handler function
- Remove debug console logs from section update methods

--- a/public/index.html
+++ b/public/index.html
@@ -69,6 +69,7 @@
 
     <!-- Page Controllers and Pages -->
     <script src="/js/pages/dashboard/dashboard-controller.js"></script>
+    <script src="/js/pages/dashboard/router-actions.js"></script>
     <script src="/js/pages/dashboard/page.js"></script>
     <script src="/js/pages/dashboard/not-found.js"></script>
     <script src="/js/pages/models.js"></script>
